# orvex

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  appConfig.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/commands/: connection.rs  export.rs  import.rs  mod.rs  query.rs  schema.rs  session.rs
src-tauri/src/db/: manager.rs
src-tauri/src/ssh/: tunnel.rs
src/components/ConnectionManager/: ConnectionDialog.tsx  FilePickerField.tsx
src/components/ConnectionManager/tabs/: AdvancedTab.tsx  MySQLTab.tsx  SSHTab.tsx  SSLTab.tsx
src/components/ImportExport/: ExportDialog.tsx  ImportDialog.tsx  ProgressDialog.tsx
src/components/Layout/: ConnectionTabs.tsx  StatusBar.tsx  Toolbar.tsx
src/components/ObjectBrowser/: ContextMenu.tsx  CreateDatabaseDialog.tsx  ObjectBrowser.tsx
src/components/ResultsGrid/: ConfirmDialog.tsx  EditableDataGrid.tsx  FilterBar.tsx  FkPickerModal.tsx  ResultsGrid.tsx
src/components/Settings/: SettingsDialog.tsx
src/components/SqlEditor/: SqlEditor.tsx
src/components/TableStructure/: AutoIncrementDialog.tsx  TableStructure.tsx
src/hooks/: useClipboardFix.ts
src/store/: queryCache.ts  sessionPersistence.ts  useAppStore.ts
src/types/: index.ts
