[package]
name = "mysql-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mysql_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "chrono", "bigdecimal", "json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
russh = "0.46"
russh-keys = "0.46"
# PEM legacy key decryption (DES-EDE3-CBC, AES-128/256-CBC)
des = "0.8"
aes = "0.8"
cbc = { version = "0.1", features = ["block-padding"] }
md-5 = "0.10"
data-encoding = "2"
tauri-plugin-dialog = "2"
tauri-plugin-mcp-bridge = "0.10"
tauri-plugin-clipboard-manager = "2.3.2"
futures = "0.3"

